Update MiniMessage and fix compatibility